1999-03-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* Makefile.am (libgnome_la_LDFLAGS): Updated library version number.

1999-03-18  James Henstridge  <james@daa.com.au>

	* Makefile.am (gnome_moz_remote_LDADD): removed -lXmu and -lXt.  I
	don't know why it was linking with Xt before.

	* gnome-moz-remote.c: made a number of changes so that when local URLs
	(ie. file: ones) are given on the command line only local copies of
	mozilla are used to display them.  Also fixed up the client window
	search a bit.  It now uses the GNOME WM hints if available, otherwise
	using recursive XQueryTree calls.  This also removes the dependency
	on libXmu (which isn't available on HP-UX unless you compile X
	yourself).

Tue Mar 16 22:39:04 1999  Tim Janik  <timj@gtk.org>

	* libgnome.h: 
	* gnomelib-init.c:
	(gnomelib_init): 
	(create_user_gnome_directories):
	setup and mkdir gnome_user_accels_dir as ~/.gnome/accels, this is used
	for applications to save their accelerators.

1999-03-12  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime-info.c (context_destroy_and_unlink): Splited from
	context_destroy.  Context_destroy now only destroys the context.
	(maybe_reload): Tries to find out if it would be wise to reload
	the contents.  Reloads information if required. 
	(load_mime_type_info): Use mime_dir_source_t instead of an
	absolute path name now.

1999-03-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime.c (maybe_reload): Implement mime-information
	automatic reloading on changes.  There is a timeout of 5 seconds
	to reload information to avoid excesive stating as usual.

1999-03-11  Jonathan Blandford  <jrb@redhat.com>

	* gnome-mime.c (mime_load_from_dir): We want to open gnome.mime
	first and user.mime last.  This way we have a consistent set of
	defaults, and a way for the user to override (but not remove) any
	value.

	* gnome-mime-info.c (load_mime_type_info_from_dir): We want to
	open gnome.keys first and user.keys last.
